--- a/frontend/welcome.html
+++ b/frontend/welcome.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HCM Chatbot - Trí Tuệ Nhân Tạo Về Tư Tưởng Hồ Chí Minh</title>
+    <title>MLN131 Chatbot - Chủ Nghĩa Xã Hội Và Thời Kỳ Quá Độ Lên Chủ Nghĩa Xã Hội</title>
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         * {
@@ -642,7 +645,7 @@
                 <div class="logo-icon">
                     <i class="fas fa-star"></i>
                 </div>
-                <span>HCM Chatbot</span>
+                <span>MLN131 Chatbot</span>
             </div>
             <nav>
                 <ul class="nav-menu">
@@ -667,17 +670,17 @@
     <!-- Hero Section -->
     <section class="hero" id="home">
         <div class="hero-content">
-            <h1 class="hero-title">Chatbot Tư Tưởng Hồ Chí Minh</h1>
+            <h1 class="hero-title">Chủ Nghĩa Xã Hội Và Thời Kỳ Quá Độ Lên Chủ Nghĩa Xã Hội</h1>
             <p class="hero-subtitle">
-                Khám phá tri thức vĩ đại của Chủ tịch Hồ Chí Minh thông qua công nghệ AI hiện đại. 
-                Trò chuyện, học tập và tìm hiểu về tư tưởng, di sản của Người một cách dễ dàng và sinh động.
+                Khám phá tri thức sâu sắc về Chủ nghĩa xã hội và thời kỳ quá độ lên chủ nghĩa xã hội. 
+                Tìm hiểu các nguyên lý cơ bản, đặc điểm và quy luật phát triển của xã hội xã hội chủ nghĩa.
             </p>
             <div class="hero-buttons">
                 <a href="chat.html" class="btn btn-primary btn-lg">
-                    <i class="fas fa-comment-dots"></i> Bắt đầu trò chuyện
+                    <i class="fas fa-book-open"></i> Bắt đầu học tập
                 </a>
                 <a href="#demo" class="btn btn-secondary btn-lg">
-                    <i class="fas fa-play-circle"></i> Xem Demo
+                    <i class="fas fa-graduation-cap"></i> Xem nội dung
                 </a>
             </div>
         </div>
@@ -689,20 +692,20 @@
             <div class="about-content">
                 <h2>Về Chúng Tôi</h2>
                 <p>
-                    HCM Chatbot là nền tảng trí tuệ nhân tạo tiên phong trong việc số hóa và lan tỏa 
-                    tư tưởng Hồ Chí Minh đến với mọi người dân Việt Nam và bạn bè quốc tế.
+                    MLN131 Chatbot là nền tảng giáo dục tiên tiến trong việc truyền bá và phổ biến 
+                    kiến thức về Chủ nghĩa xã hội và thời kỳ quá độ lên chủ nghĩa xã hội.
                 </p>
                 <p>
-                    Với công nghệ RAG (Retrieval-Augmented Generation) tiên tiến, chúng tôi mang đến 
-                    trải nghiệm trò chuyện tự nhiên, chính xác và đầy cảm hứng về cuộc đời, sự nghiệp 
-                    và tư tưởng của Chủ tịch Hồ Chí Minh.
+                    Với hệ thống kiến thức toàn diện, chúng tôi cung cấp 
+                    thông tin chính xác và sâu sắc về các vấn đề lý luận và thực tiễn 
+                    của Chủ nghĩa xã hội và thời kỳ quá độ.
                 </p>
                 <a href="#features" class="btn btn-primary">
                     Khám phá tính năng
                 </a>
             </div>
             <div class="about-image">
-                <img src="background-8.png" alt="Về HCM Chatbot">
+                <img src="background-8.png" alt="Về MLN131 Chatbot">
             </div>
         </div>
     </section>
@@ -716,43 +719,43 @@
                     <div class="feature-icon">
                         <i class="fas fa-brain"></i>
                     </div>
-                    <h3>AI Thông Minh</h3>
-                    <p>Công nghệ AI tiên tiến hiểu ngữ cảnh và trả lời chính xác về tư tưởng Hồ Chí Minh.</p>
+                    <h3>Lý Luận Khoa Học</h3>
+                    <p>Trình bày các nguyên lý cơ bản của Chủ nghĩa xã hội một cách khoa học và chính xác.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
                         <i class="fas fa-database"></i>
                     </div>
-                    <h3>Kho Tri Thức Lớn</h3>
-                    <p>Tích hợp hàng ngàn tài liệu, bài viết, bài phát biểu của Chủ tịch Hồ Chí Minh.</p>
+                    <h3>Tài Liệu Phong Phú</h3>
+                    <p>Tập hợp đầy đủ các tài liệu kinh điển và nghiên cứu về Chủ nghĩa xã hội và thời kỳ quá độ.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
                         <i class="fas fa-comment-alt"></i>
                     </div>
-                    <h3>Trò Chuyện Tự Nhiên</h3>
-                    <p>Giao tiếp dễ dàng bằng ngôn ngữ tự nhiên, như đang trò chuyện với người thật.</p>
+                    <h3>Học Tập Tương Tác</h3>
+                    <p>Phương pháp học tập tương tác giúp hiểu sâu các khái niệm và nguyên lý cơ bản.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
                         <i class="fas fa-graduation-cap"></i>
                     </div>
-                    <h3>Quiz & Học Tập</h3>
-                    <p>Tạo quiz tự động để kiểm tra kiến thức về tư tưởng Hồ Chí Minh.</p>
+                    <h3>Đánh Giá Kiến Thức</h3>
+                    <p>Hệ thống đánh giá và kiểm tra kiến thức về Chủ nghĩa xã hội và thời kỳ quá độ.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
                         <i class="fas fa-shield-alt"></i>
                     </div>
-                    <h3>Thông Tin Chính Xác</h3>
-                    <p>Dữ liệu được kiểm chứng kỹ lưỡng, đảm bảo tính chính xác cao.</p>
+                    <h3>Nguồn Tài Liệu Đáng Tin Cậy</h3>
+                    <p>Dựa trên các tác phẩm kinh điển và nghiên cứu khoa học uy tín.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
                         <i class="fas fa-mobile-alt"></i>
                     </div>
-                    <h3>Đa Nền Tảng</h3>
-                    <p>Sử dụng mọi lúc mọi nơi trên web, mobile, tablet.</p>
+                    <h3>Tiếp Cận Dễ Dàng</h3>
+                    <p>Học tập mọi lúc mọi nơi với giao diện thân thiện và dễ sử dụng.</p>
                 </div>
             </div>
         </div>
@@ -762,23 +765,23 @@
     <section class="demo" id="demo">
         <div class="demo-container">
             <div class="demo-preview">
-                <img src="chat-demo.webp" alt="Demo HCM Chatbot">
+                <img src="chat-demo.webp" alt="Demo MLN131 Chatbot">
             </div>
             <div class="demo-content">
-                <h2>Trải Nghiệm Demo</h2>
+                <h2>Học Tập Hiệu Quả</h2>
                 <p>
-                    Khám phá giao diện trò chuyện hiện đại với HCM Chatbot. 
-                    Đặt câu hỏi và nhận câu trả lời ngay lập tức về tư tưởng, cuộc đời và sự nghiệp của Bác.
+                    Khám phá phương pháp học tập mới với MLN131 Chatbot. 
+                    Tìm hiểu sâu về các khái niệm, nguyên lý và quy luật của Chủ nghĩa xã hội và thời kỳ quá độ.
                 </p>
                 <ul class="demo-features">
-                    <li>Giao diện thân thiện, dễ sử dụng</li>
-                    <li>Phản hồi nhanh chóng và chính xác</li>
-                    <li>Hiển thị nguồn trích dẫn rõ ràng</li>
-                    <li>Lưu lịch sử trò chuyện</li>
-                    <li>Gợi ý câu hỏi thông minh</li>
+                    <li>Nội dung khoa học và chính xác</li>
+                    <li>Giải thích dễ hiểu, dễ tiếp thu</li>
+                    <li>Trích dẫn nguồn tài liệu đáng tin cậy</li>
+                    <li>Lưu trữ lịch sử học tập</li>
+                    <li>Gợi ý chủ đề học tập phù hợp</li>
                 </ul>
                 <a href="chat.html" class="btn btn-primary btn-lg">
-                    <i class="fas fa-rocket"></i> Dùng thử ngay
+                    <i class="fas fa-book-reader"></i> Học ngay
                 </a>
             </div>
         </div>
@@ -788,34 +791,34 @@
     <section class="stats">
         <div class="stats-container">
             <div class="stat-item">
-                <h3>10,000+</h3>
-                <p>Người dùng</p>
-            </div>
-            <div class="stat-item">
-                <h3>50,000+</h3>
-                <p>Câu hỏi đã trả lời</p>
+                <h3>1,000+</h3>
+                <p>Học viên</p>
             </div>
             <div class="stat-item">
                 <h3>5,000+</h3>
-                <p>Tài liệu tham khảo</p>
+                <p>Bài học hoàn thành</p>
             </div>
             <div class="stat-item">
-                <h3>99%</h3>
-                <p>Độ chính xác</p>
+                <h3>500+</h3>
+                <p>Tài liệu kinh điển</p>
+            </div>
+            <div class="stat-item">
+                <h3>100%</h3>
+                <p>Nội dung khoa học</p>
             </div>
         </div>
     </section>
 
     <!-- CTA Section -->
     <section class="cta" id="contact">
-        <h2>Sẵn Sàng Khám Phá?</h2>
-        <p>Bắt đầu hành trình tìm hiểu tư tưởng Hồ Chí Minh cùng AI ngay hôm nay</p>
+        <h2>Sẵn Sàng Học Tập?</h2>
+        <p>Bắt đầu hành trình tìm hiểu Chủ nghĩa xã hội và thời kỳ quá độ lên chủ nghĩa xã hội ngay hôm nay</p>
         <div class="hero-buttons">
             <a href="auth.html" class="btn btn-primary btn-lg">
-                <i class="fas fa-user-plus"></i> Đăng ký miễn phí
+                <i class="fas fa-user-plus"></i> Đăng ký học tập
             </a>
             <a href="chat.html" class="btn btn-secondary btn-lg">
-                <i class="fas fa-comments"></i> Trò chuyện ngay
+                <i class="fas fa-book"></i> Bắt đầu học
             </a>
         </div>
     </section>
@@ -824,8 +827,8 @@
     <footer class="footer">
         <div class="footer-container">
             <div class="footer-section">
-                <h3>HCM Chatbot</h3>
-                <p>Nền tảng AI về tư tưởng Hồ Chí Minh, lan tỏa tri thức và giá trị cao đẹp của Người.</p>
+                <h3>MLN131 Chatbot</h3>
+                <p>Nền tảng giáo dục về Chủ nghĩa xã hội và thời kỳ quá độ, lan tỏa tri thức và giá trị khoa học.</p>
                 <div class="social-links">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
@@ -861,7 +864,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2025 HCM Chatbot. Tất cả quyền được bảo lưu.</p>
+            <p>&copy; 2025 MLN131 Chatbot. Tất cả quyền được bảo lưu.</p>
         </div>
     </footer>
 </body>
